[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/tileset.png" type="Texture" id=1]
[ext_resource path="res://scripts/Boy_Evil.gd" type="Script" id=2]
[ext_resource path="res://scenes/BulletSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/boss.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 11.7299 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 30.0

[sub_resource type="Animation" id=3]
resource_name = "Battle"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("BulletSpawner:interval")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.4, 0.1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BulletSpawner:active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BulletSpawner:pattern")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BulletSpawner2:interval")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 5.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.01 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BulletSpawner2:active")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 5.5, 5.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BulletSpawner2:pattern")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 5.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[node name="Boy_Evil" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.264862, 0 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 128, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="BulletSpawner" parent="." instance=ExtResource( 3 )]
active = true
interval = 0.4

[node name="BulletSpawner2" parent="." instance=ExtResource( 3 )]
active = true

[node name="AggroArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
position = Vector2( 0, 5 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Battle = SubResource( 3 )

[node name="BossMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
[connection signal="body_entered" from="AggroArea" to="." method="_on_AggroArea_body_entered"]
